# Szachy

./: CMakeLists.txt  Figury.cpp  Figury.h  Plansza.cpp  Plansza.h  Window.h  konsola.cpp  konsola.h  main.cpp
